Fixes alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -128,10 +128,6 @@ span h4 {
 
 .widget {
     .extendednavigation {
-        float: none;
-        position: relative;
-        display: inline-block;
-        float: right;
         min-height: 50px;
         @media @tablet {
             background-color: transparent;
@@ -143,8 +139,6 @@ span h4 {
             }
         }
         ul {
-            float: right;
-            text-align: center;
             padding: 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
@@ -235,7 +229,6 @@ span h4 {
                             color: @color-swatch1;
                             @media @tablet {
                                 font-size: 10px;
-                                padding-right: 10px;
                             }
                         }
                         @media @tablet {
